[package]
name = "ai-tiff"
version = "0.11.3"
edition = "2021"
resolver = "2"

# note: when changed, also update test runner in `.github/workflows/rust.yml`
rust-version = "1.85.0"

license = "MIT"
description = "A no_std fork of tiff"
authors = ["The image-rs Developers"]

repository = "https://github.com/atom-planet-embrace/ai-image-tiff"
categories = ["multimedia::images", "multimedia::encoding"]

exclude = ["tests/images/*", "tests/fuzz_images/*", "tests/**/*.tif"]

[dependencies]
half = { version = "2.4.1", default-features = false }
quick-error = { package = "ai-quick-error", version = "2.0.1" }
no_std_io = { version = "0.6", default-features = false, features = ["alloc"] }

# Rename to avoid confusion with the feature name.
fax34 = { package = "ai-fax", version = "0.2.6", default-features = false, optional = true }
flate2 = { package = "ai-flate2", version = "1.0.20", default-features = false, features = ["rust_backend"], optional = true }
weezl = { package = "ai-weezl", version = "0.1.12", default-features = false, optional = true }
ruzstd = { version = "0.7", default-features = false, optional = true }
zune-jpeg = { version = "0.5.1", default-features = false, optional = true }
image-webp = { package = "ai-image-webp", version = "0.2.4", optional = true }

[dev-dependencies]
criterion = "0.3.1"
# We may already depend on this via flate2
crc32fast = "1.5"

[features]
default = ["deflate", "fax", "jpeg", "lzw"]
std = ["no_std_io/std", "half/std"]

# Compression algorithms
deflate = ["dep:flate2"]
fax = ["dep:fax34"]
jpeg = ["dep:zune-jpeg"]
lzw = ["dep:weezl"]
webp = ["dep:image-webp"]
zstd = ["dep:ruzstd"]

[[bench]]
name = "lzw"
harness = false
